# Jenny

./: .gitignore  .gitmodules  CMakeLists.txt  mingw-w64-x86_64.cmake  readme.md
.github/workflows/: build.yml
include/: ResUtil.hpp  UJennyApplication.hpp  UJennyContext.hpp  UMap.hpp  UPathRenderer.hpp  UPointSpriteManager.hpp
include/io/: GenParser.hpp
lib/: CMakeLists.txt
src/: GenUtil.cpp  ResUtil.cpp  UJennyApplication.cpp  UJennyContext.cpp  UMap.cpp  UPathRenderer.cpp  UPointSpriteManager.cpp  main.cpp
src/io/: GenParser.cpp
